Fix spacing between icon and item title

--- a/docusaurus/src/components/IdentityCard/identity-card.scss
+++ b/docusaurus/src/components/IdentityCard/identity-card.scss
@@ -47,7 +47,7 @@
     }
 
     &-icon {
-      margin-right: 8px;
+      margin-right: 6px;
       color: var(--strapi-neutral-500);
 
       i::before {
